Fix for countdown on mobile

--- a/app/styles/pages/home.scss
+++ b/app/styles/pages/home.scss
@@ -27,7 +27,6 @@ $name: 'page-home';
 
 .masthead-container {
   max-width: 100% !important;
-  margin-top: -$navbarHeightMobile;
 }
 
 h3 a {
